feat(client): explore page

--- a/packages/client/src/style.css
+++ b/packages/client/src/style.css
@@ -24,4 +24,8 @@
   *:focus-visible {
     @apply outline-1;
   }
+
+  .main-unauthenticated {
+    @apply grow w-full flex flex-col items-center px-4 pt-header-sm mb-6 mt-4 md:pt-header-md md:mb-8;
+  }
 }
