--- a/packages/angular-client/src/styles.css
+++ b/packages/angular-client/src/styles.css
@@ -1,1 +1,27 @@
+@import url("https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+
 @import "tailwindcss";
+
+@theme {
+  --color-primary-bright: #2837fa;
+  --color-primary-subtle: #e5ebff;
+  --color-warning-bright: #fa3927;
+
+  --font-sans: "Albert Sans", sans-serif;
+
+  --spacing-header-sm: calc(var(--spacing) * 16);
+  --spacing-header-md: calc(var(--spacing) * 20);
+
+  --shadow-float: 0 8px 32px #27272a1f;
+}
+
+@layer base {
+  * {
+    @apply outline-offset-1 outline-primary-bright;
+  }
+
+  *:focus,
+  *:focus-visible {
+    @apply outline-1;
+  }
+}
