--- a/packages/angular-client/src/styles.css
+++ b/packages/angular-client/src/styles.css
@@ -25,7 +25,12 @@
     @apply outline-1;
   }
 
-  app-unauthenticated-layout {
-    @apply w-full *:flex *:flex-col *:items-center *:w-full;
+  app-unauthenticated-layout,
+  app-create-account-page {
+    @apply w-full grow flex flex-col items-center;
+  }
+
+  .main {
+    @apply grow flex flex-col w-full mt-header-sm md:mt-header-md pt-4 px-4 pb-6;
   }
 }
