--- a/packages/angular-client/src/styles.css
+++ b/packages/angular-client/src/styles.css
@@ -26,11 +26,16 @@
   }
 
   app-unauthenticated-layout,
-  app-create-account-page {
+  app-create-account-page,
+  app-log-in-page {
     @apply w-full grow flex flex-col items-center;
   }
 
   .main {
     @apply grow flex flex-col w-full mt-header-sm md:mt-header-md pt-4 px-4 pb-6;
+  }
+
+  .main-auth {
+    @apply items-center max-w-xl gap-6 md:gap-2 h-full;
   }
 }
