feat: create open date slide and create action

--- a/packages/angular-client/src/styles.css
+++ b/packages/angular-client/src/styles.css
@@ -35,6 +35,10 @@
     @apply w-full grow flex flex-col items-center;
   }
 
+  app-capsule-page {
+    @apply min-h-screen;
+  }
+
   app-main-layout:has(app-sidebar:not(.hidden)) {
     @apply md:flex-row;
   }
@@ -53,5 +57,11 @@
 
   .capsule-editor-navigation {
     @apply fixed left-4 right-4 mx-auto bottom-8 flex flex-col items-center gap-2 max-w-sm *:w-full md:flex-row md:justify-end md:max-w-5xl md:*:w-auto;
+  }
+}
+
+@layer utilities {
+  .hide-calendar-picker-indicator::-webkit-calendar-picker-indicator {
+    display: none;
   }
 }
