feat: not found page

--- a/packages/angular-client/src/styles.css
+++ b/packages/angular-client/src/styles.css
@@ -31,7 +31,8 @@
   app-create-account-page,
   app-log-in-page,
   app-explore-page,
-  app-capsule-page {
+  app-capsule-page,
+  app-not-found-page {
     @apply w-full grow flex flex-col items-center;
   }
 
